<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="browse"
        android:enabled="true"
        android:icon="@drawable/ic_homestay"
        android:shortcutShortLabel="@string/shortcut_browse_short"
        android:shortcutLongLabel="@string/shortcut_browse_long"
        android:shortcutDisabledMessage="@string/shortcut_browse_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.nammahomestay"
            android:targetClass="com.nammahomestay.ui.SplashActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="add_homestay"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:shortcutShortLabel="@string/shortcut_add_short"
        android:shortcutLongLabel="@string/shortcut_add_long"
        android:shortcutDisabledMessage="@string/shortcut_add_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.nammahomestay"
            android:targetClass="com.nammahomestay.ui.SplashActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="inquiries"
        android:enabled="true"
        android:icon="@drawable/ic_inquiry"
        android:shortcutShortLabel="@string/shortcut_inquiries_short"
        android:shortcutLongLabel="@string/shortcut_inquiries_long"
        android:shortcutDisabledMessage="@string/shortcut_inquiries_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.nammahomestay"
            android:targetClass="com.nammahomestay.ui.SplashActivity" />
    </shortcut>
</shortcuts>
